Fixes spacing on site links after I added back in the design link.

--- a/src/sass/partials/_index_page_preload.scss
+++ b/src/sass/partials/_index_page_preload.scss
@@ -78,7 +78,7 @@
 				font-family:"HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue";
 				font-weight:300;
 			}
-			&:nth-child(3) {
+			&:nth-child(4) {
 				padding-right:0;
 				&::after{content:'';display:none;}
 			}
